# test_aiohttp

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  ruff.toml
src/: create_app.py  routers.py
src/views/: __init__.py  hashed_view.py  helthcheck_view.py
tests/: test_main.py
